--- a/cam.html
+++ b/cam.html
@@ -9,11 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Diana" />
+<meta name="author" content="Cam" />
 
-<meta name="date" content="2024-09-10" />
+<meta name="date" content="2024-09-12" />
 
-<title>Our Website for Assignment 3</title>
+<title>Cam</title>
 
 <script src="site_libs/header-attrs-2.28/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -341,33 +341,30 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Our Website for Assignment 3</h1>
-<h4 class="author">Diana</h4>
-<h4 class="date">2024-09-10</h4>
+<h1 class="title toc-ignore">Cam</h1>
+<h4 class="author">Cam</h4>
+<h4 class="date">2024-09-12</h4>
 
 </div>
 
 
-<div id="this-is-our-website" class="section level2">
-<h2>This is our website!</h2>
-<div id="creators" class="section level3">
-<h3>Creators:</h3>
-<div id="diana-httpsgithub.comdmm442" class="section level4">
-<h4>Diana | <a href="https://github.com/dmm442"
-class="uri">https://github.com/dmm442</a></h4>
-</div>
-<div id="cam-httpsgithub.comcamdavi" class="section level4">
-<h4>Cam | <a href="https://github.com/camdavi"
-class="uri">https://github.com/camdavi</a></h4>
-<div class="float">
-<img src="/Users/dianamulder/Downloads/IMG_3835.jpg"
-alt="Here is a picture of Diana’s kitten, Clover" />
-<div class="figcaption">Here is a picture of Diana’s kitten,
-Clover</div>
-</div>
-</div>
-</div>
-</div>
+<p>All about me:</p>
+<ul>
+<li>I am a first-year master’s student in Natural Resources and the
+Environment
+<ul>
+<li>Concentration in Fishery and Aquatic Science</li>
+</ul></li>
+<li>I grew up in Dansville, NY and have lived in Syracuse, NY with my
+partner since 2019
+<ul>
+<li>We bought our first house in 2022</li>
+</ul></li>
+<li>I received my B.A. in environmental science from Wells College
+<ul>
+<li>I was a goalie on the men’s soccer team</li>
+</ul></li>
+</ul>
 
 
 
